// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Box /> props box-tag 1`] = `
<span
  className="ek-box"
/>
`;

exports[`<Box /> props className 1`] = `
<div
  className="ek-box ololo"
/>
`;

exports[`<Box /> render 1`] = `
<div
  className="ek-box"
/>
`;
